# colbuilder

./: .gitignore  CITATION.cff  CONTRIBUTING.md  CrystalContacts.txt  LICENSE.md  README.md  __init__.py  citation.cff  colbuilder  colbuilder.py  colbuilder2.yml  config.yaml  connect_from_colbuilder.txt  crystal_contacts.txt  crystal_contacts_sym.txt  crystalcontacts_from_colbuilder.txt  crystalcontacts_from_colbuilder_opt.txt  crystalcontacts_from_colbuilder_opt_id.txt  homosapiens.fasta  homosapiens_alignment.fasta  seqconfig.json  setup.cfg  setup.py  simple_config.yaml  temp_config.yaml
.tmp/sequence_gen/: homosapiens_modeller.ali  target.D00000001  target.V99990001  target.ini  target.sch
analysis/: capsControl.py  visualizeCrystal.py
data/amber99/: aminoacids.rtp
data/contactmap/: contact_map
data/martini300C-ff/: aminoacids.ff  store_GaussianFit_221122.ff  store_Gaussian_org_270223.ff  store_aa_050923.ff
data/martini300C-mapping/: cla.amber99.map  cys.amber99.map  gln.amber99.map  glu.amber99.map  hie.amber99.map  l5y.amber99.map  leu.amber99.map  modifications.amber99.mapping  thr.amber99.map  trp.amber99.map
docs/: api_reference.md  colbuilder_data.md  configuration.md  data_dictionary.md  user_guide.md
docs/core/: README.md
docs/data/: README.md
docs/tutorials/: colbuilder.md
examples/: basic_config.yaml  config_example.yaml
geometry/: build_geometry.py  caps.py  chimera.py  connect.py  contacts.py  crystal.py  crystalcontacts.py  gen_coord.py  gen_model.py  gen_symmetry.py  get_crosslink.py  matrixget.py  matrixset.py  model.py  models.py  optimize.py  rotationmatrix.py  system.py
old/: CrystalContactsSym.txt  crossConnect.py  itpGenerator.py  merge.sh
rattus_norvegicus_topology_files/: col_0.0.itp  col_0.0_go-harm.itp  col_0.0_go-sites.itp  col_0.0_go-table.itp  col_0.itp  col_1.1.itp  col_1.1_go-harm.itp  col_1.1_go-sites.itp  col_1.1_go-table.itp  col_1.itp  col_10.itp  col_11.11.itp  col_11.11_go-harm.itp  col_11.11_go-sites.itp  col_11.11_go-table.itp  col_11.itp  col_11_go-excl.itp  col_12.12.itp  col_12.12_go-excl.itp  col_12.12_go-harm.itp  col_12.12_go-sites.itp  col_12.12_go-table.itp  col_12.28.itp  col_12.28_go-harm.itp  col_12.28_go-sites.itp  col_12.28_go-table.itp  col_12.itp  col_12_go-excl.itp  col_13.13.itp  col_13.13_go-harm.itp  col_13.13_go-sites.itp  col_13.13_go-table.itp  col_13.57.itp  col_13.57_go-harm.itp  col_13.57_go-sites.itp  col_13.57_go-table.itp  col_13.itp  col_14.14.itp  col_14.14_go-excl.itp  col_14.14_go-harm.itp  (+255 more)
src/: SymLargeCollagen.py  colbuilder.py  create_pullgroups.py  create_pullgroups_v5.py  create_pullgroups_v5_frompdb.py  crosslink.py  crystalSymmetry.py  symgeo.sh  topology.sh  triplehelix.py
src/colbuilder/: colbuilder.py
tests/: CrystalContacts.txt
tests/core/: test_core_sequence.py
topology/: build_atomistic_topology.py  build_cg_topology.py  gen_itp.py  gen_top.py  mapGoModel.py  preparePDB.py  topWriter.py  topology.py
(+153 files in other folders)
