[wheel]
universal = 1

[metadata]
name = colbuilder
version = 2.0.0
description = collagen builder of microfibrils
author = Matthias Brosz
author_email = matthias.brosz@h-its.org
#description_file = README.md # TODO
url = "https://github.com/mbrosz/colbuilder"
license = Apache 2.0
classifier =
    License :: OSI Approved :: TO BE FOUND
    Operating System :: UNIX
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
	= geometry
	= topology
include_package_data = True
setup_requires =
    setuptools 

install_requires = 
    numpy
    vermouth >= 0.9.1

python_requires = >= 3.9

[options.packages.find]
where = geometry
     = topology
