[metadata]
name = Colbuilder
version = 2.0
description = Collagen fibrils from amino acid sequences
long_description = file: README.md
long_description_content_type = text/markdown
author = MPIP-Grater Group
author_email = matthias.brosz@h-its.org
url = https://github.com/mbrosz/colbuilder
license = Apache-2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: UNIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >= 3.9
install_requires = 
    numpy == 1.25
    vermouth == 0.9.1
    pandas == 2.2.2
    biopython == 1.84
    scikit-learn
    h5py
    libnetcdf
    threadpoolctl
    modeller
    PyYAML
    click
    pydantic
    tqdm
    asyncio
    colorama

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    colbuilder = colbuilder.colbuilder:main
    pdb2fasta = colbuilder.utils.pdb2fasta:main

[options.extras_require]
dev =
    pytest
    pytest-cov
    flake8
    black
    isort
    mypy

[flake8]
max-line-length = 100
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist

[mypy]
ignore_missing_imports = True

[options.package_data]
colbuilder = 
    data/**/*
    data/*